<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_cargar">

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.rafalopez.recuperatorio.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />

    <fragment
        android:id="@+id/nav_cargar"
        android:name="com.rafalopez.recuperatorio.ui.cargar.CargarFragment"
        android:label="@string/menu_cargar"
        tools:layout="@layout/fragment_cargar" />

    <fragment
        android:id="@+id/nav_borrar"
        android:name="com.rafalopez.recuperatorio.ui.borrar.BorrarFragment"
        android:label="@string/menu_borrar"
        tools:layout="@layout/fragment_borrar" />
</navigation>